--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "lint": "eslint --ext .jsx --fix src",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "dev": "node node_modules/vite/bin/vite.js",
+    "lint": "node node_modules/eslint/bin/eslint.js --ext .jsx --fix src",
+    "build": "node node_modules/vite/bin/vite.js build",
+    "preview": "node node_modules/vite/bin/vite.js preview",
+    "test": "node node_modules/vitest/vitest.mjs run"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -25,7 +25,7 @@
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1",
     "jsdom": "^20.0.0",
-    "vite": "^3.0.7",
+    "vite": "^3.2.11",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.22.1"
   }
