--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node node_modules/vite/bin/vite.js",
-    "lint": "node node_modules/eslint/bin/eslint.js --ext .jsx --fix src",
+    "lint": "node node_modules/eslint/bin/eslint.js . --fix",
     "build": "node node_modules/vite/bin/vite.js build",
     "preview": "node node_modules/vite/bin/vite.js preview",
     "test": "node node_modules/vitest/vitest.mjs run"
@@ -16,14 +16,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
-    "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
     "jsdom": "^20.0.0",
     "vite": "^3.2.11",
     "vite-plugin-eslint": "^1.8.1",
