--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -7,12 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output event details
-        run: |
-          echo "Event Name: ${{ github.event_name }}"
-          echo "Action: ${{ github.event.action }}"
-          echo "Issue Title: ${{ github.event.issue.title }}"
-          echo "Issue Body: ${{ github.event.issue.body }}"
-          echo "Issue Number: ${{ github.event.issue.number }}"
-          echo "Issue State: ${{ github.event.issue.state }}"
-          echo "Repository Name: ${{ github.repository }}"
-          echo "Actor: ${{ github.actor }}"
+        run: echo "${{ toJson(github.event) }}"
